2010-07-14  Jeffrey Stedfast  <fejj@novell.com>

	* tilesource.cpp (InvalidateTileLayer): Instead of calling a
	callback function, emit an event.

2010-07-14  Jeffrey Stedfast  <fejj@novell.com>

	Fixes toward getting drt 2004 to work (and likely a number of
	others).

	* deepzoomimagetilesource.cpp: Replace custom callback solution
	with events. This is needed in case the same DZITS is the source
	for multiple MSI's.
	(element_start): More bitmask fixes.

	* multiscaleimage.cpp: Remove DZITS callbacks (now event handlers)
	when the source gets replaced and immediately add new event
	handlers to the new source when it gets set. Same for subimage
	sources.

	* bitmapimage.cpp (CleanupLoader): Close the loader before
	deleting it so gtk doesn't freak out.
	(UriSourceChanged): In case of failure, we don't need to call
	DownloaderFailed because our resource_notify() callback should do
	that for us.

	* application.cpp (GetResource): If a notify_cb is provided,
	always call it with NotifyFailed before returning failure. This
	way BitmapImage doesn't emit failures events twice for the same
	failure.

2010-07-14  Alan McGovern  <amcgovern@novell.com>

	* value.h.in: Add sanity checks so we don't accidentally treat
	  a GCHandled object as being the actual object in native
	  code.

2010-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* animation.cpp: Always go into managed land to convert keyframes. Fixes a
	crash with #561.

2010-07-14  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: Rearrange the order of things in
	  UIElement::OnIsAttachedChanged so that we emit Unloaded
	  events before propagating the change to the subtree. This
	  fixes the order of event emission when unloading.

2010-07-14  Alan McGovern  <amcgovern@novell.com>

	* richtextbox.cpp: Propagate IsAttached through
	  RichTextBlock::Blocks manually as it is a dynamically
	  provided value (not a local or auto value) so the normal
	  logic misses it.
